--- a/index.html
+++ b/index.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>L Vato</title>
+  <meta charset="UTF-8">
+  <title>Ramsey & Tyler's Wedding Invitation</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 600px;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #333;
+    }
+    p {
+      color: #666;
+    }
+    .date {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+    .names {
+      font-size: 28px;
+      margin-bottom: 20px;
+    }
+  </style>
 </head>
-
 <body>
-    <main>
-        <h1><button class="btn"> L Vato </button></h1>
-    </main>
-</body>
 
+  <div class="container">
+    <h1>Wedding Invitation</h1>
+    <p class="date">December 23rd, 2023</p>
+    <p class="names">Ramsey & Tyler</p>
+    <p>We joyfully invite you to celebrate our union in marriage. Join us for a day filled with love, laughter, and happiness.</p>
+    <p>Location: [Venue Name, Address]</p>
+    <p>Time: [Time of the Ceremony]</p>
+    <p>Please RSVP by December 10th, 2023.</p>
+    <p>For RSVP and more information, please contact us at [Contact Information].</p>
+    <p>We look forward to sharing this special day with you!</p>
+  </div>
+
+</body>
 </html>
