--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <p class="date">December 23rd, 2023</p>
     <p class="names">Ramsey & Tyler</p>
     <p>We joyfully invite you to celebrate our union in marriage. Join us for a day filled with love, laughter, and happiness.</p>
-    <p>Location: [Venue Name, Address]</p>
-    <p>Time: [Time of the Ceremony]</p>
+    <p>Location: Mars</p>
+    <p>Time: 9:76pm </p>
     <p>Please RSVP by December 10th, 2023.</p>
     <p>For RSVP and more information, please contact us at [Contact Information].</p>
     <p>We look forward to sharing this special day with you!</p>
