--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <p>Location: Mars</p>
     <p>Time: 9:76pm </p>
     <p>Please RSVP by December 10th, 2023.</p>
-    <p>For RSVP and more information, please contact us at [Contact Information].</p>
+    <p>For RSVP and more information, please contact us at 0monsuno82@gmail.com.</p>
     <p>We look forward to sharing this special day with you!</p>
   </div>
 
